--- a/index.css
+++ b/index.css
@@ -554,12 +554,12 @@ body {
   }
   .card-container {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     perspective: none;
   }
   .card {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100% !important;
     border-radius: 0;
     box-shadow: none;
     border: none;
@@ -570,5 +570,5 @@ body {
   .card-buttons button {
     padding: 20px 5px;
     font-size: 9px;
-}
+  } /* Smaller font for more buttons */
 }
