--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ button:active {
     box-shadow: 0 4px 8px rgba(0, 188, 212, 0.2);
 }
 
+.swal2-title, .swal2-html-container, .swal2-content {
+    color: #ffffff !important;
+}
+
 .footer {
     margin-top: 20px;
     font-size: 14px;
@@ -163,4 +167,5 @@ button:active {
         font-size: 12px;
         padding: 8px 15px;
     }
+
 }
